syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcClientCount";

service ClientCountProvider {
	rpc GetClientCount (google.protobuf.Empty) returns (stream ClientCount);
}

message ClientCount{
	int32 Count = 1;
}
